Fixed element spacing in advanced box

--- a/src/components/AdvancedBox/AdvancedBox.sass
+++ b/src/components/AdvancedBox/AdvancedBox.sass
@@ -1,2 +1,5 @@
 .advanced-box
-  margin: 2em
+  margin: 8px 32px
+
+  > div
+    margin: 8px 0
